stages/stage8/k8s/infra/flight-db/flight-db-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: flight-db-allow-apps
  namespace: apollo11-infra
spec:
  podSelector:
    matchLabels:
      app: flight-db
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: apollo11-apps
      ports:
        - protocol: TCP
          port: 5432
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: apollo11-infra
      ports:
        - protocol: TCP
          port: 5432
  policyTypes:
    - Ingress
    - Egress
